[BUGFIX] display opened collapse items

--- a/assets/css/_search.scss
+++ b/assets/css/_search.scss
@@ -62,6 +62,9 @@
       }
     }
   }
+  .collapse.in {
+    display: block;
+  }
   .dl-horizontal {
     dt {
       width: 200px;
